feat: [CS-14] customer browse review list (#3)
* feat: customer browse review list

* fix: catch error when cursor.Close()

* test: test for browse review list

---------
